--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap-icons": "^1.0.0-alpha5",
     "vue": "^2.5.11",
     "vue-router": "^3.4.2",
